1999-07-02  Jesper Skov  <jskov@cygnus.co.uk>
        PR20157
	* tests/cache.c: Print stride values, preventing timeout on slow
	targets.

1999-06-28  Jesper Skov  <jskov@cygnus.co.uk>

	* include/pkgconf/hal.h (CYGDBG_HAL_DEBUG_GDB_BREAK_SUPPORT):
	Fixed parent.

1999-06-24  Jonathan Larmour  <jlarmour@cygnus.co.uk>

	* include/pkgconf/hal.h: Clarify descriptions of
	CYGDBG_HAL_DEBUG_GDB_BREAK_SUPPORT and
	CYGDBG_HAL_DEBUG_GDB_CTRLC_SUPPORT.

1999-06-17  Nick Garnett  <nickg@cygnus.co.uk>

	* include/pkgconf/hal.h: Added CYGDBG_HAL_DEBUG_GDB_CTRLC_SUPPORT
	to enable inclusion of ^C interrupt handler. Added CDL to control
	it.

1999-06-10  Gary Thomas  <gthomas@cygnus.co.uk>

	* src/hal_stub.c: Need to init register pointer.

1999-05-31  Jesper Skov  <jskov@cygnus.co.uk>

	* src/hal_stub.c: Respect HAL_BREAKINST_SIZE setting.

1999-05-28  Nick Garnett  <nickg@cygnus.co.uk>

	* src/hal_stub.c (initHardware): Added call to
	HAL_STUB_PLATFORM_INIT if it is defined.

	* include/pkgconf/hal.h: Added a #undef for CYG_HAL_ROM_MONITOR,
	largely so that a stubrom permutation can define it.

1999-05-27  Nick Garnett  <nickg@cygnus.co.uk>

	* src/hal_stub.c: Do not call HAL_ICACHE_INVALIDATE_ALL() and
	HAL_DCACHE_INVALIDATE_ALL() in __instruction_cache() and
	__data_cache() for MIPS targets. These macros are simply
	duplicates.

1999-05-27  Jesper Skov  <jskov@cygnus.co.uk>

	* tests/cache.c:  Added handling of unified caches.

1999-05-25  Jonathan Larmour  <jlarmour@cygnus.co.uk>

	* tests/cache.c: Use HAL_DCACHE_SYNC if available

1999-05-21  Jesper Skov  <jskov@cygnus.co.uk>

	* src/hal_stub.c (__install_traps): Set exit vector to __reset.

	
1999-05-21  Jesper Skov  <jskov@cygnus.co.uk>

	* tests/intr.c: Get RTC values from CYGBLD_HAL_PLATFORM_H.
	Ensure there are fallback definitions.

	* src/hal_stub.c (handle_exception_cleanup): Added optional call
	of HAL_STUB_PLATFORM_STUBS_FIXUP macro.

1999-05-18  Jesper Skov  <jskov@cygnus.co.uk>
