@@ -71,7 +71,7 @@ cyg_uint32 isr( cyg_uint32 vector, CYG_ADDRWORD data )
     CYG_TEST_CHECK( CYGNUM_HAL_INTERRUPT_RTC == vector ,
                     "Bad vector passed to ISR");
 
-    HAL_CLOCK_RESET( vector, CYGNUM_KERNEL_COUNTERS_RTC_PERIOD );
+    HAL_CLOCK_RESET( vector, CYGNUM_HAL_RTC_PERIOD );
 
     HAL_INTERRUPT_ACKNOWLEDGE( vector );
     
@@ -88,7 +88,7 @@ void intr_main( void )
 
     HAL_INTERRUPT_ATTACH( CYGNUM_HAL_INTERRUPT_RTC, isr, ISR_DATA, 0 );
 
-    HAL_CLOCK_INITIALIZE( CYGNUM_KERNEL_COUNTERS_RTC_PERIOD );
+    HAL_CLOCK_INITIALIZE( CYGNUM_HAL_RTC_PERIOD );
 
     HAL_INTERRUPT_UNMASK( CYGNUM_HAL_INTERRUPT_RTC );
 
