@@ -1,3 +1,7 @@
+1999-07-08  Jesper Skov  <jskov@cygnus.co.uk>
+
+	* tests/ser_test_protocol.inl (change_config): Changed implementation.
+
 1999-06-20  Gary Thomas  <gthomas@cygnus.co.uk>
 
 	* include/pkgconf/io_serial.h: Some clean up (removed commented
